--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest --watch",
+    "dev": "nodemon index.js",
     "start": "nodemon index.js"
   },
   "keywords": [],
@@ -13,7 +13,7 @@
   "dependencies": {
     "express": "^4.18.2",
     "jest": "^29.4.1",
-    "nodemon": "^2.0.20",
+    "nodemon": "^2.0.22",
     "supertest": "^6.3.3"
   }
 }
